# SacredSaveGameManager

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  TODO.txt  pyproject.toml  requirements.txt  setup.py  update_version.py
.github/workflows/: ci.yml
sacred_save_game_manager/: __init__.py  __main__.py  main.py
sacred_save_game_manager/controllers/: __init__.py  config_manager.py  game_manager.py  operation_history_manager.py  save_manager.py  status_bar_manager.py  ui_manager.py
sacred_save_game_manager/models/: __init__.py
sacred_save_game_manager/utils/: __init__.py  cross_platform_symlinks.py  exceptions.py  logger.py  platform_utils.py  validators.py  version.py
sacred_save_game_manager/views/: __init__.py
tests/: __init__.py  test_basic.py
